--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,11 +6,20 @@
 
 body {
 	padding: 10px;
-	background-color: cyan;
+	background-color: ;
 }
 
 h1{
+	color: #f06d06;
 	text-align: center;
-	font-size: 40px;
-	font-family: Garamond;
+	font-size: 100px;
+	font-family: Times;
+}
+
+h2{
+	text-align: center;
+}
+
+.w3-container{
+	border: 2px solid;
 }
