--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,10 @@ h1{
 	margin-top: 30px;
 }
 
+h6{
+	color: #6c757d;
+}
+
 h2{
 	text-align: center;
 	margin: 60px 0 30px 0;
@@ -32,6 +36,7 @@ h2{
 	border-radius: 5px;
 	padding: 5px 10px;
 	border: 2px solid teal;
+	text-align: center;
 }
 
 #search-button{
@@ -46,6 +51,5 @@ h2{
 	margin: 40px 280px 0 280px;
 	padding: 80px;
 	border: 2px solid #f06d06;
-	text-align: center;
 	border-radius: 5px;
 }
